finished the restaurants API and refined the swagger documentation
